# myblog

./: .gitattributes  .gitignore  _config.yml  about.md  make.bat  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
_includes/: head.html
_layouts/: default.html
_sass/: dark.scss
assets/js/: darkmode.js
docs/: .buildinfo  .buildinfo.bak  about.html  blog.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: about.doctree  environment.pickle  index.doctree
docs/.doctrees/posts/: katex-test.doctree
docs/.doctrees/posts/2025/12/: katex-test.doctree
docs/_sources/: about.md.txt  about.rst.txt  index.md.txt  index.rst.txt
docs/_sources/posts/: katex-test.rst.txt
docs/_sources/posts/2025/12/: katex-test.md.txt
docs/_static/: pygments_dark.css
docs/blog/: 2025.html  archive.html  atom.xml  drafts.html  language.html  tag.html
docs/blog/language/: english.html
docs/blog/tag/: test.html
docs/posts/: katex-test.html
docs/posts/2025/12/: katex-test.html
source/: about.md  about.rst  conf.py  index.rst
source/posts/2025/12/: katex-test.rst
